test/typecheck/fail/global_false_constraint.sail
$option -abstract_types

constraint false
